[#20] FE: Fixed date & time validation bugs; Fixed bug where at datepicker, month and year were not visible

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -353,3 +353,10 @@ ngb-pagination ul {
     }
   }
 }
+
+ngb-datepicker {
+  .form-select {
+    color: var(--text-c-primary) !important;
+    padding: 0 !important;
+  }
+}
